--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,15 +47,22 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/nutriMAMA_Logo.png"
 
 # The following section is specific to Flutter packages.
 flutter:
   uses-material-design: true
   assets: 
       - assets/images/nutriMAMA.png
+      - assets/images/nutriMAMA_Logo.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
