--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,16 @@ flutter_launcher_icons:
 
 flutter:
   uses-material-design: true
+  fonts:
+      - family: Montserrat
+        fonts:
+          - asset: fonts/Montserrat-Bold.ttf
+            weight: 700
+          - asset: fonts/Montserrat-Medium.ttf
+            weight: 500
+
   assets: 
       - assets/images/nutriMAMA.png
       - assets/images/nutri_Logo.png
+  
 
